# MateriaisDidaticos

./: .gitmodules  README.md
Algoritmos e Estrutura de Dados I/2019.Q1.Fabricio/Listas/: lista01.md  lista02.md  lista03.md  lista04.md
Algoritmos e Estrutura de Dados I/2019.Q1.Fabricio/Pratica/: aedi04_exercicios.md
Algoritmos e Estrutura de Dados I/2019.Q1.Fabricio/Teoria/: Aula01.md  Aula02.md  Aula03.md  Aula04.md  Aula05.md  Aula07.md  Aula08.md  Aula09.md  Aula10.md  compila.sh  template.tex
Algoritmos e Estrutura de Dados I/2019.Q1.Fabricio/Teoria/figs/: logotipo-ufabc-abaixo.eps  logotipo.eps
Paradigmas de Programação/2018.Q2.Fabricio/Pratica/: Atividade01.md  Atividade01_modelo.md  Atividade02.md  Cifra.md  Funcoes.md  GameOfLife.md  Intro.md  K-Means.md  Monads.md  QuickCheck.md  Recursao.md  Tautologia.md  TiposClasses.md  Votos.md  compila.sh  compilaAtividade.sh
Paradigmas de Programação/2018.Q2.Fabricio/Teoria/: 01-Paradigmas.md  02-Lambda.md  03-Listas.md  04-Recursao.md  05-HigherOrder.md  07-ADT.md  08-Monads.md  09-IO.md  10-ParSeq.md  11-Concurrent.md
Paradigmas de Programação/2019.Q2.Emilio/Exemplos/: README.md
Paradigmas de Programação/2019.Q2.Emilio/Exemplos/Análise e Plotagem de Dados/: LICENSE  README.md  dados_diarios_rj_inmet.txt  dados_diarios_sp_inmet.txt  meteo.cabal  stack.yaml
Paradigmas de Programação/2019.Q2.Emilio/Exemplos/Análise e Plotagem de Dados/src/: Main.hs
Paradigmas de Programação/2019.Q2.Emilio/Exemplos/Arkanoid/: README.md  arkanoid.cabal
Paradigmas de Programação/2019.Q2.Emilio/Exemplos/Arkanoid/src/: Ball.hs  Blocks.hs  Collision.hs  Game.hs  Main.hs  Player.hs  Window.hs
Paradigmas de Programação/2019.Q2.Emilio/Exemplos/Fractal/: README.md  fractal.cabal
Paradigmas de Programação/2019.Q2.Emilio/Exemplos/Fractal/src/: FractalPar.hs  FractalSeq.hs
Paradigmas de Programação/2019.Q2.Emilio/Exemplos/Laziness/: LICENSE  README.md  leizi.cabal
Paradigmas de Programação/2019.Q2.Emilio/Exemplos/Laziness/src/: Main.hs
Paradigmas de Programação/2019.Q2.Emilio/Exemplos/Machine Learning/: Main.hs  Vector.hs
Paradigmas de Programação/2019.Q2.Emilio/Exemplos/StateTransformer/: README.md  mona.cabal
Programação Estruturada/2018.Q3.Carla_e_Emilio/aulas/: 01.intro-curso.tex  02.organiz-comput.tex  03.intro-C.tex  04.ES-tipos.tex  05.operacoes-rel-log.tex  06.condicionais.tex  07.repeticao.tex  08.funcoes.tex  09.recursao.tex  10.vetores.matrizes.tex  11.ponteiros.parte1.tex  12.ponteiros.parte2.tex  13.structs.tex  14.arquivos.tex  15.ordenacao.tex  16.listas.ligadas.tex  makefile
Programação Estruturada/2018.Q3.Carla_e_Emilio/aulas/figs/: ponteiro.dia
Programação Estruturada/2018.Q3.Carla_e_Emilio/listas/: export_conf.el  lista01.org  lista02.org  lista03.org  lista04.org  lista05.org  lista06.org  lista07.org  lista08.org  lista7_ordenacao.c  makefile
Programação Paralela/Eternity II/: checker.c  eternity.c  eternity.org  eternity_par.c
Programação Paralela/Eternity II/generator/: LICENSE  generator.cabal
Programação Paralela/Eternity II/generator/src/: Main.hs
Sistemas Distribuídos/2018.Q2.Emilio/Aulas/: aula01.tex  aula02.tex  aula03.tex  aula04.tex  aula05.tex  aula06.tex  aula09-10.tex  aula11.tex  aula13.tex  aula1415.tex  buildall.sh  pratica01.tex  pratica02.tex  pratica03.tex
Sistemas Distribuídos/2018.Q2.Emilio/Aulas/figuras/: mrexample.java  seq_cons_a.pdf.bkp
Sistemas Distribuídos/2018.Q2.Emilio/Listas/: lista01.org  lista02.org  lista03.org  lista04.org  lista05.org
Sistemas Distribuídos/2018.Q2.Emilio/Projetos/1.JRMI/: ep1.tex
Sistemas Distribuídos/2018.Q2.Emilio/Projetos/2.DHT/: projeto2.tex
Suporte ao ECE (vulgo S)/: README.md  classbot_exemplo.py  config_exemplo.yaml
(+26 files in other folders)
