name:                generator
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/generator#readme
license:             BSD3
license-file:        LICENSE
author:              Emilio Francesquini
maintainer:          e.francesquini@ufabc.edu.br
copyright:           2020 Emilio Francesquini
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable generator
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , array
                     , split
  ghc-options:         -Wall -O3
