name:                meteo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/meteo#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable meteo
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base                 >= 4.9,
                       split                >= 0.2,
                       text                 >= 0.11,
                       hvega                >= 0.4
  ghc-options:         -O3 -Wall