name:                fractal
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/fractal#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable fractals
  ghc-options:         -Wall -O3 -main-is FractalSeq
  hs-source-dirs:      src
  main-is:             FractalSeq.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       binary,
                       bytestring,
                       vector

executable fractalp
  ghc-options:         -Wall -O3 -threaded -rtsopts -with-rtsopts=-N -eventlog -main-is FractalPar
  hs-source-dirs:      src
  main-is:             FractalPar.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       binary,
                       bytestring,
                       vector,
                       monad-par,
                       deepseq
